--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,20 @@ repositories {
 	mavenCentral()
 }
 
+//Spring Boot Overriding
+ext['hibernate.version'] = '5.2.11.Final' //추가
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
+	compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.2.15'
+	
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	//추가
+	classpath "io.spring.gradle:dependency-management-plugin:1.0.4.RELEASE" 
+
 }
